syntax = "proto3";

package user.v1.captcha;

import "google/protobuf/duration.proto";

option go_package = "vw_user/api/v1/captcha;captv1";

service Captcha {
    rpc DeleteCodeFromCache(DeleteCodeFromCacheReq) returns (DeleteCodeFromCacheResp) {}
    rpc SetCodeToCache(SetCodeToCacheReq) returns (SetCodeToCacheResp) {}
}

message DeleteCodeFromCacheReq {
    string email = 1;
}
message DeleteCodeFromCacheResp {
    int32 code = 1;
    string msg = 2;
}

message SetCodeToCacheReq {
    string email                        = 1;
    string captcha_code                 = 2;
    google.protobuf.Duration expiration = 3;
}
message SetCodeToCacheResp {
    int32 code = 1;
    string msg = 2;
}